<resources>
    <string name="app_name">vNOTE</string>
    <string name="main_page">Note page</string>
    <string name="delete_page">Delete page</string>
    <string name="detail_label">Detail</string>
    <string name="insert_menu">Insert now</string>
    <string name="Loading_menu">Loading !</string>
    <string name="setting_menu">Setting</string>

    //action broadcast
    <string name="broadcast_receiver_pin">pinbroadcast</string>
    <string name="broadcast_sign_in">sign_in_successful</string>
    <string name="broadcast_sync">syncei</string>
    <string name="broadcast_sign_out">update_ui_after_delete_all_data_database</string>


    <string name="content_authority">com.minhvu.proandroid.sqlite.database</string>
    <string name="popup_delete">Delete</string>
    <string name="popup_restore">Restore</string>
    <string name="youtube_host">https://www.youtube.com</string>


    <string name="note_uri">note_uri</string>

    <string name="notify_note_uri">note_uri</string>
    <string name="notify_note_title">title_note_pin</string>
    <string name="notify_note_content">content_note_pin</string>
    <string name="notify_note_remove">remove_note_pin</string>
    <string name="notify_note_color">color_note_pin</string>
    <string name="notify_note_pin">note_pin</string>

    <string name="TAG_KEY_PIN_COLOR">header</string>
    <string name="TAG_KEY_PIN_COLOR_BG">bg</string>

    <string name="PREFS_ALARM_PIN">pin_to_bar</string>
    <string name="PREFS_ALARM_SWITCH_KEY">ALARM_SWITCH_KEY</string>
    <string name="PREFS_ALARM_FILE">states_alarm_files</string>
    <string name="PREFS_ALARM_FROM_DATE">alarm_from_date</string>
    <string name="PREFS_ALARM_TO_DATE">alarm_to_date</string>
    <string name="PREFS_ALARM_WHEN">alarm_when</string>
    // this is flag for every mode of alert
    <string name="type_of_switch_pin">scPin</string>
    <string name="type_of_switch_15min">sc15Min</string>
    <string name="type_of_switch_30min">sc30Min</string>
    <string name="type_of_switch_at_time">scAtTime</string>
    <string name="type_of_switch_repeater">scRepeater</string>
    <string name="type_of_switch_reset">scReset</string>

    <string name="cancel_label">Cancel</string>
    <string name="password_label">Use Password</string>
    <string name="unlock_label">Unlock</string>
    <string name="unlock_tutorial">Touch sensor</string>
    //label for alert mode
    <string name="remind_me_now">Remind me now</string>
    <string name="remind_me_on_15_label">Remind me on 15m</string>
    <string name="remind_me_on_30_label">Remind me on 30m</string>
    <string name="remind_me_at_label">Remind me at</string>
    <string name="reminds_every_day_label">Reminds me every day</string>
    <string name="cancel_reminder_label">Cancel reminder</string>

    <string name="reset_sort_dialog_pager">Reset</string>

    //login
    <string name="facebook_app_id">211379172740015</string>
    <string name="fb_login_protocol_scheme">fb211379172740015</string>

    //info user
    <string name="user_token">user_token</string>
    //When a user sign out, delete all data
    <string name="user_sign_out_delete_data">delete_all_data</string>
    <string name="sign_in_flag">sign_in</string>
    <string name="sign_out_flag">sign_out</string>


    //non-textual description
    <string name="fb_login_description">facebook login</string>
    <string name="sign_in_with_label">SIGN IN WITH</string>
    <string name="sync_label">sync</string>
    <string name="disconnect_label">disconnect</string>
    <string name="sign_out_label">sign out</string>


    <string name="users_list_firebase">UsersList</string>
    <string name="note_directory">note</string>
    <string name="document_directory">document</string>

    <string name="my_storage">mvnote</string>
    <string name="last_update_ones_account">LastSync</string>
    <string name="close_sign_in_when_complete_task">close_sign_in_window</string>
</resources>
