<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp">

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/scPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:text="@string/remind_me_now" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:background="#000" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/sc15Minute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="@string/remind_me_on_15_label" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:background="#000" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/sc30Minute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="@string/remind_me_on_30_label" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:background="#000" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/scAtTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="@string/remind_me_at_label" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:background="#000" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/scRepeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="@string/reminds_every_day_label" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/scReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_corners"
        android:paddingLeft="10dp"
        android:text="@string/cancel_reminder_label"

        />
</LinearLayout>